@@ -5,7 +5,7 @@
 #ifndef __VB_CHUNK_SOURCE_H
 #define __VB_CHUNK_SOURCE_H
 
-#include "VBChunk.h"
+#include "BufferChunk.h"
 #include "DynamicVBManager.h"
 
 
@@ -14,7 +14,7 @@ namespace dingus {
 /**
  *  Chunk source that provides VB chunks from CDynamicVBManager.
  */
-class CVBManagerSource : public IChunkSource<CVBChunk> {
+class CVBManagerSource : public IChunkSource<TVBChunk> {
 public:
 	CVBManagerSource( int stride ) : mStride(stride) { }
 	virtual SHARED_CHUNK lock( int count ) { return CDynamicVBManager::getInstance().allocateChunk( count, mStride ); }
